[metadata]
name = chat-miner
version = attr: chatminer.__version__
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
description = Lean parsers and visualizations for chat data
maintainer = Jonas Weich
maintainer_email = jns.wch@gmail.com
author = Jonas Weich
author_email = jns.wch@gmail.com
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/joweich/chat-miner/issues
    Source Code = https://github.com/joweich/chat-miner

[options]
python_requires = >=3.8
install_requires =
    pandas
    numpy
    matplotlib
    wordcloud
    python-dateutil
    tqdm

[options.extras_require]
NLP =
    transformers

[coverage:run]
omit =
    chatminer/cli.py
    chatminer/nlp.py
    chatminer/visualizations.py
    chatminer/__init__.py